# unicode-ident4c

./: .gitattributes  .gitignore  Cargo.toml  README.md  meson.build
diagram/: Cargo.toml
examples/: interactive.c
ffi/: build.rs  lib.rs
generate/: Cargo.toml
generate/src/: main.rs  write.rs
include/: ident4c.h
src/: ident4c.c  tables.c
tests/: compare.rs  static_size.rs
tests/roaring/: mod.rs
